--- a/netbox/templates/worker-deployment.yaml
+++ b/netbox/templates/worker-deployment.yaml
@@ -174,4 +174,8 @@ spec:
       hostAliases:
         {{- toYaml . | indent 8 }}
       {{- end }}
+      {{- with .Values.worker.topologySpreadConstraints }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end }}
